power overwhelming
