# api/openapi/v1/auth.yml
@@ -107,7 +107,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UserInfo'
+                $ref: '#/components/schemas/User'
         '401':
           description: Unauthorized
 # ---
@@ -125,6 +125,20 @@ components:
         uuid:
           type: string
           default: ""
+        email:
+          type: string
+          default: ""
+        created_at:
+          type: string
+          default: ""
+        roles:
+          type: array
+          items:
+            type: string
+        permissions:
+          type: array
+          items:
+            type: string
     Tokens:
       type: object
       properties:
@@ -180,7 +194,3 @@ components:
         refresh_token:
           type: string
           default: ""
-    CreateFruitResponse:
-      $ref: '#/components/schemas/User'
-    UserInfo:
-      $ref: '#/components/schemas/User'
