# internal/auth/adapters/http/v1/models.go
@@ -1,9 +1,15 @@
 package adapter
 
-import "github.com/hasansino/go42/internal/auth/models"
+import (
+	"time"
+
+	"github.com/hasansino/go42/internal/auth/models"
+)
 
 type UserResponse struct {
 	UUID        string   `json:"uuid"`
+	Email       string   `json:"email"`
+	CreatedAt   string   `json:"created_at"`
 	Roles       []string `json:"roles"`
 	Permissions []string `json:"permissions"`
 }
@@ -11,6 +17,8 @@ type UserResponse struct {
 func UserResponseFromModel(user *models.User) UserResponse {
 	return UserResponse{
 		UUID:        user.UUID.String(),
+		Email:       user.Email,
+		CreatedAt:   user.CreatedAt.Format(time.DateTime),
 		Roles:       user.RoleList(),
 		Permissions: user.PermissionList(),
 	}
